토큰과 Database ID 를 받아와서 로그인

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.notion_api_test">
+    package="com.cjh.notion_api_test">
    <application
         android:label="notion_api_test"
         android:icon="@mipmap/ic_launcher">
