--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   http: ^0.13.3
   intl: ^0.17.0
-  flutter_dotenv: ^5.0.0
   provider: ^5.0.0
   collection: ^1.15.0
+  shared_preferences: ^2.0.6
   flutter_datetime_picker: ^1.5.1
   flutter_neat_and_clean_calendar: ^0.2.2+10
 
@@ -51,8 +51,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - .env
+  #  assets:
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
